testing/tests/ui/pluralize.stderr
error[E0277]: the trait bound `str: PluralizeCount` is not satisfied
 --> tests/ui/pluralize.rs:3:10
  |
3 | #[derive(Template)]
  |          ^^^^^^^^ the trait `PluralizeCount` is not implemented for `str`
  |
  = help: the following other types implement trait `PluralizeCount`:
            &T
            &mut T
            i128
            i16
            i32
            i64
            i8
            isize
          and $N others
  = note: required for `&str` to implement `PluralizeCount`
  = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)
